--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent=".7" />
 
-    <com.omidio.tabsyncedadapter.TabSyncedRecyclerView
+    <com.omidio.tabsyncedrecyclerview.TabSyncedRecyclerView
         android:id="@+id/recycler_view_vertical"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -124,7 +124,7 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <com.omidio.tabsyncedadapter.TabSyncedRecyclerView
+    <com.omidio.tabsyncedrecyclerview.TabSyncedRecyclerView
         android:id="@+id/recycler_view_horizontal"
         android:layout_width="0dp"
         android:layout_height="0dp"
